@startuml "Device Models"

title "Device Models"

' top to bottom direction

skinparam linetype ortho


Entity Member {
    * id: int [PK]
    --
    * device_groups: DeviceGroup[0...*]
}

Entity DeviceGroup {
    * id: int [PK]
    ..
    * name: str[32] 
    constraints: UNIQUE
    description: human readable device group name
    ..
    * description:  str[256] 
    description: device group description 
    ..
    * creation_date: DateTimeField 
    constraints: NOT NULL 
    default: timezone.now
    description: when was the device group created
    <<autogenerated>>
    ==
    * owner: Member[1]
    --
    * devices: Device[0...*]
}

Entity Device {
    * id: int [PK]
    ..
    * name: str[32] 
    constraints: NOT NULL 
    description: human readable device name
    ..
    * uid: UUIDField 
    constraints: UNIQUE 
    description: device's unique id, used to identify the device in the system
    <<autogenerated>>
    ..
    * date_added: DateTimeField 
    constraints: NOT NULL 
    default: timezone.now
    <<autogenerated>>
    description: when was the device added, is set automatically to the date and time when the device was added
    ..
    * is_active: BooleanField 
    default: True
    description: is the device active, set to false when the device is deleted
    default: true
    ==
    * group: DeviceGroup[1]
    --
    * data: DeviceData[0...*]
}

Entity DeviceData {
    * id: int [pk]
    ..
    * message: JSONField
    constraints: NOT NULL
    default: {}
    description: data received from the device
    ..
    * date: DateTimeField
    constraints: NOT NULL
    default: timezone.now
    description: date and time when the data was received
    <<autogenerated>>
    ==
    device: Device[1]
}

' relations
Member        ||--o{ DeviceGroup
DeviceGroup   ||--o{ Device
Device        ||--o{ DeviceData


@enduml